# pi-inky-weather-epd

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  config.toml  pi-inky-weather-epd.code-workspace  readme.md  release.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  postCreate.sh
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md
.github/agents/: snapshot-maintainer.agent.md
.github/instructions/: daily-forecast-dates.md  github-actions-ci-cd-best-practices.instructions.md  test-workflow-guardrails.instructions.md
.github/prompts/: commit.prompt.md  commitify.prompt.md  pr-review.prompt.md  provider-scaffold.prompt.md
.github/workflows/: deploy.yml  main.yml  release.yml  test.yml
config/: default.toml  development.toml  test.toml
docs/: snapshot-test-consolidation-plan.md
misc/: gif-generation-commands.md  readme.md  send-img-to-pi.sh
proptest-regressions/configs/: validation.txt
proptest-regressions/domain/: models.txt
scripts/: compare-versions.sh  generate-icon-preview.sh  generate-showcase.sh  generate-timelapse-gif.sh  send-img-to-pi.sh  setup-git-hooks.sh  simulate-24h.sh
src/: bom.rs  chart.rs  clock.rs  config.rs  constants.rs  context.rs  errors.rs  i18n.rs  lib.rs  logger.rs  main.rs  pimironi_image_py.rs  settings.rs  update.rs  utils.rs  weather_dashboard.rs
src/apis/: mod.rs
src/configs/: mod.rs  settings.rs  validation.rs
src/dashboard/: chart.rs  context.rs  mod.rs
src/domain/: icons.rs  mod.rs  models.rs  weather_code.rs
src/providers/: bom.rs  factory.rs  fetcher.rs  mod.rs  open_meteo.rs
src/weather/: icons.rs  utils.rs
static/fill-svg-static/: EINK_MODIFICATION_GUIDE.md
static/fonts/: Roboto-Regular-Dashed.sfd
tests/: bom_integration_test.rs  bom_provider_test.rs  clock_integration_test.rs  context_daily_forecast_test.rs  daily_date_test.rs  daily_forecast_test.rs  date_format_test.rs  daylight_saving_test.rs  error_priority_test.rs  fetcher_test.rs  i18n_de_integration_test.rs  i18n_es_integration_test.rs  i18n_integration_test.rs  i18n_ja_integration_test.rs  icon_name_validation_test.rs  open_meteo_date_conversion_test.rs  open_meteo_integration_test.rs  open_meteo_provider_test.rs  snapshot_bom_test.rs  snapshot_open_meteo_prefer_codes_test.rs  snapshot_open_meteo_test.rs  snapshot_precipitation_test.rs  snapshot_provider_test.rs  snapshot_test.rs  snow_detection_test.rs  template_test.rs  test.rs  update_check_test.rs  update_status_test.rs  update_test.rs  wind_speed_unit_test.rs
tests/fixtures/: bom_daily_forecast.json  bom_hourly_forecast.json  open_meteo_daily_forecast.json  open_meteo_forecast.json  open_meteo_hourly_forecast.json
tests/helpers/: mod.rs  test_utils.rs  wiremock_setup.rs
tests/snapshots/: snapshot_open_meteo_prefer_codes_test__snapshot_open_meteo_dashboard_prefer_codes.snap  snapshot_open_meteo_prefer_codes_test__snapshot_open_meteo_early_morning_prefer_codes.snap  snapshot_open_meteo_prefer_codes_test__snapshot_open_meteo_end_of_day_prefer_codes.snap  snapshot_open_meteo_prefer_codes_test__snapshot_open_meteo_midnight_boundary_prefer_codes.snap  snapshot_open_meteo_test__snapshot_open_meteo_dashboard.snap  snapshot_open_meteo_test__snapshot_open_meteo_early_morning.snap  (+33 more)
(+26 files in other folders)
