[package]
name = "pi-inky-weather-epd"
version = "0.2.0"
edition = "2021"
authors = ["MT"]
description = "A weather display application for the Raspberry Pi using an EPD (e-paper display)."
homepage = "https://github.com/mt-empty/pi-inky-weather-epd"
keywords = ["raspberry-pi", "epd", "weather", "display"]
categories = ["embedded", "iot"]
license = "GPL-3.0"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

anyhow = "1"
lazy_static = "1.5"
strum = "0.27"
strum_macros = "0.27"
config = "0.15"
tinytemplate = "1.2"
resvg = "0.44"
image = "0.25"
openssl = { version = "0.10", features = ["vendored"] }
zip = "2.2.2"
semver = "1.0.25"
thiserror = "2.0.11"

# dev dependencies
[dev-dependencies]
usvg = "0.44"
cross = "0.2.5" # needed for ci/cd
