[package]
name = "pi-inky-weather-epd"
version = "0.8.3-beta.1"
edition = "2021"
authors = ["MT"]
description = "A weather display application for the Raspberry Pi using an EPD (e-paper display)."
homepage = "https://github.com/mt-empty/pi-inky-weather-epd"
keywords = ["raspberry-pi", "epd", "weather", "display"]
categories = ["embedded", "iot"]
license = "GPL-3.0"

[features]
default = []       # No CLI in release builds
cli = ["dep:clap"] # Enable CLI for simulation/development

[dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

anyhow = "1"
strum = "0.27"
strum_macros = "0.27"
config = "0.15"
tinytemplate = "1.2"
resvg = "0.46"
image = "0.25"
openssl = { version = "0.10", features = ["vendored"] }
zip = "7.0.0"
semver = "1.0"
thiserror = "2.0"
tempfile = "3.17"
regex = { version = "1.11" }
url = { version = "2.5", features = ["serde"] }
nutype = { version = "0.6", features = ["serde"] }
once_cell = "1.21"
clap = { version = "4.5", features = ["derive"], optional = true }

# dev dependencies
[dev-dependencies]
insta = "1.45.1"
usvg = "0.46"
cross = "0.2"                                                            # needed for ci/cd to compile and test for different architectures
serial_test = "3.2"
wiremock = "0.6.5"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }


[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
